--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,7 @@ body {
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
@@ -27,8 +27,14 @@ h1 {
   font-size: $type-size-3;
 }
 
+.underline-on-hover:hover {
+    text-decoration: underline;
+}
+
 h2 {
-  font-size: $type-size-4;
+  font-family: $header-font-family;
+  font-size: $type-size-5;
+  font-weight:normal
 }
 
 h3 {
