--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -2,7 +2,7 @@
 
 <section class="page__share">
   {% if site.data.ui-text[site.locale].share_on_label %}
-    <h4 class="page__share-title">{}</h4>
+    <h4 class="page__share-title"></h4>
   {% endif %}
 
 </section>
