--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 <section class="page__share">
-  {% if site.data.ui-text[site.locale].share_on_label %}
+  {% if site.data.ui-text[site.locale].share_on_labelzzz %}
   {% endif %}
 
 </section>
