--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,6 +1,6 @@
 {% include base_path %}
 
-{% if paginator.total_pages > 100 %}
+{% if paginator.total_pages == 0 %}
 <nav class="pagination">
   <ul>
     {% comment %} Link for previous page {% endcomment %}
